--- a/Javascript (CSS-background-image) fail/index.css
+++ b/Javascript (CSS-background-image) fail/index.css
@@ -88,19 +88,13 @@ main{
     display:flex;flex-wrap:wrap;
     justify-content:center;
     align-items:center;
-    margin:35px;
 
 }
 .box{
-    /* width:270px;height:auto; */
-    /* background-color:#C4E1FF; */
+    width:270px;height:auto;
+    background-color:#C4E1FF;
     margin:10px;
-    /* 試 設置父元素 */
-    position: relative;
-    width:21%;
-    padding-top:15%;
-    height:0;
-
+    max-width:100%;
 }
 
 img{
@@ -109,47 +103,37 @@ img{
     /*height:202.8px;*/ /*202.8px*/
     display:block;
     /* border:10px solid black;  */ /* 測試,前面img會套到*/
-    
-    /* 試 object-fit + 子元素 */
-    object-fit:cover;
-    position: absolute;
-    left:0;
-    top:0;
-    width:100%;
-    height:100%;
-
 }
 
 h4{
-    display:flex;
-    justify-content:center;
-    align-items:center;
     background-color:#C4E1FF;
     margin:0px;height:40px;
     text-align: center;
-    /* line-height: 1.5; */
+    line-height: 2.5;
 
 }
 
 @media (max-width:1200px){
     .box{
         width:45%;
-        padding-top:30%;
-        margin:2.5%;
     }
-    .container{
-        margin:0;
+    /* img{
+        width:540px;
+        height:auto;
+    } */
+    #test{
+        width:100%;height:350px;
+        background-size: cover;
+        background-repeat: no-repeat;
     }
-
 }
 
 @media (max-width:600px){
     .box{
         width:90%;
-        padding-top:70%;
-        margin:5%;
     }
     
+
     .item{display:none;}
     #icon{display:block;}
 }
@@ -158,7 +142,7 @@ button{
     padding:5px;
 }
 footer{
-    height:200px;
+    height:100px;
     display:flex;
     justify-content:center;
     align-items:center;
@@ -167,4 +151,10 @@ footer{
 footer div{
     flex:none;
     text-align: center;
+}
+
+#test{
+    width:100%;height:202.8px; /*202.8*/
+    background-size: cover;
+    background-repeat: no-repeat;
 }
